--- a/app/views/videos/_login.html.erb
+++ b/app/views/videos/_login.html.erb
@@ -16,9 +16,9 @@
           <div class="row">
             <div class="col-sm-12">
               <%= label_tag :username, "Username:" %>
-              <%= text_field_tag :username, 'test@test.com', class: 'form-control' %>
+              <%= text_field_tag :username, nil, class: 'form-control' %>
               <%= label_tag :password, "Password:" %>
-              <%= password_field_tag :password, 'password', class: 'form-control' %>
+              <%= password_field_tag :password, nil, class: 'form-control' %>
             </div>
           </div>
         </div>
